# ggml

examples/dolly-v2/: CMakeLists.txt  main.cpp
examples/gpt-2/: CMakeLists.txt  main.cpp
examples/gpt-j/: CMakeLists.txt  main.cpp
examples/stablelm/: CMakeLists.txt  main.cpp
examples/whisper/: CMakeLists.txt  main.cpp
